# Humanoid_Initial_Joint_Angles

./: .gitignore  CMakeLists.txt  Readme.md
assets/lapi_description/meshes/: Ankle_L_Pitch_Link.STL  Ankle_L_Roll_Link.STL  Ankle_R_Pitch_Link.STL  Ankle_R_Roll_Link.STL  Hip_L_Pitch_Link.STL  Hip_L_Roll_Link.STL  Hip_L_Yaw_Link.STL  Hip_R_Pitch_Link.STL  Hip_R_Roll_Link.STL  Hip_R_Yaw_Link.STL  Knee_L_Pitch_Link.STL  Knee_R_Pitch_Link.STL  base_link.STL
assets/lapi_description/models/: lapi_description copy.xml  lapi_description.urdf  lapi_description.xml
config/lapi_config/: lapi.yaml
scripts/: tuner.py
src/: main.cpp
